dataset path changes

--- a/notebooks/create_custom_dataset.ipynb
+++ b/notebooks/create_custom_dataset.ipynb
@@ -602,7 +602,7 @@
     }
    ],
    "source": [
-    "invoiceXpert.save_to_disk(\"data/invoiceXpert\")"
+    "invoiceXpert.save_to_disk(config.data.invoiceXpert_local)"
    ]
   },
   {
