--- a/notebooks/test_oob_models.ipynb
+++ b/notebooks/test_oob_models.ipynb
@@ -103,7 +103,7 @@
    "source": [
     "# Load the dataset\n",
     "# TODO: Load the dataset from HF\n",
-    "invoice_df = load_from_disk(config.data.invoiceXpert)"
+    "invoice_df = load_from_disk(config.data.invoiceXpert_local)"
    ]
   },
   {
