--- a/notebooks/create_custom_dataset.ipynb
+++ b/notebooks/create_custom_dataset.ipynb
@@ -54,19 +54,24 @@
       "data:\n",
       "  fatura: mathieu1256/FATURA2-invoices\n",
       "  rvl_cdip_subset: jinhybr/rvl_cdip_400_train_val_test\n",
-      "  invoiceXpert: wiF0n/InvoiceXpert\n",
+      "  invoiceXpert:\n",
+      "    hf_path: wiF0n/InvoiceXpert\n",
+      "    local_path: data/invoiceXpert\n",
+      "    num_labels: 2\n",
+      "    label_names:\n",
+      "    - invoice\n",
+      "    - not-invoice\n",
       "models:\n",
       "  classification:\n",
       "    oob:\n",
       "      pt: microsoft/dit-base\n",
       "      ft: microsoft/dit-base-finetuned-rvlcdip\n",
       "mlflow:\n",
-      "  tracking_uri: .mlflow\n",
       "  experiments:\n",
       "    classification: invoice-classification\n",
       "utils:\n",
       "  seed: 420\n",
-      "  run_date: 2024-09-02/23/24\n",
+      "  run_date: 2024-03-02/24/24\n",
       "\n"
      ]
     }
@@ -126,120 +131,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8f227eface4a4f988cd580ba66b3b73c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading readme:   0%|          | 0.00/1.41k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5a372ed0a1ea4997af4d4aa5b1974caf",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading data:   0%|          | 0.00/374M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "00deb2defe434c2f9f39986e8e59fd2a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading data:   0%|          | 0.00/361M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0b3bf39e52e140c798e05de1b86a7b69",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading data:   0%|          | 0.00/180M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ccff89d19727460eb4166a1e2558f991",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading data:   0%|          | 0.00/186M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c79b64b17443483993c101605b2c35e7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating train split:   0%|          | 0/6400 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0b3534ec603d4094bb8e6aa3c3ef889e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating validation split:   0%|          | 0/1600 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b05c56895b3642a0ba7e8e4f209cc6d7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating test split:   0%|          | 0/1600 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "rvl_cdip = load_dataset(config.data.rvl_cdip_subset)"
    ]
@@ -269,7 +161,7 @@
     "    dataset = (\n",
     "        dataset.map(\n",
     "            lambda example: {\n",
-    "                \"image\": example[\"image\"],\n",
+    "                \"image\": example[\"image\"].convert(\"RGB\"),\n",
     "                \"label\": 0 if example[\"label\"] == 11 else 1,\n",
     "            }\n",
     "        )\n",
@@ -287,7 +179,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "edf536a648b94852b8a10f914d6c49c4",
+       "model_id": "bd6563a22b3846cea64f418ecc565a88",
        "version_major": 2,
        "version_minor": 0
       },
@@ -301,7 +193,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "98ca5bab728c424797dd105e496799c0",
+       "model_id": "c3757db7f29342608e70bcf7410936dc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -315,7 +207,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8127b304b31c4451b6d2387e2e6e80c7",
+       "model_id": "0be6dc132ac14d1db6a3637da73bf9f0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -329,7 +221,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c37401d03fd541b2b79315e89b88db30",
+       "model_id": "82c73a83728c44fa944e5bd2da80f493",
        "version_major": 2,
        "version_minor": 0
       },
@@ -343,7 +235,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a7e2e0419e874db68a9dbdc1869cc911",
+       "model_id": "2af0036deb064639bd07544df02debf5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -357,7 +249,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "400cd5d3da5040c58596c1a496d516f5",
+       "model_id": "48daf6e3c20e419da1e591713a45ad23",
        "version_major": 2,
        "version_minor": 0
       },
@@ -387,7 +279,7 @@
     "    dataset = (\n",
     "        dataset.map(\n",
     "            lambda example: {\n",
-    "                \"image\": example[\"image\"],\n",
+    "                \"image\": example[\"image\"].convert(\"RGB\"),\n",
     "                \"label\": 0,\n",
     "            }\n",
     "        )\n",
@@ -416,7 +308,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ee65cceae34141d1be5753e556a227f3",
+       "model_id": "afb5e40ba51844c2b5723cc9d1a9559d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -430,7 +322,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "30fc047f3fad47c09bf61b6cb663d8c9",
+       "model_id": "09a09aa8e7cb4444af1c76f9ea347f2f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -444,7 +336,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e7986d8d5ff4219b504d5f4f1947e10",
+       "model_id": "b02e864db60a43cbb40c4c9965fddb1e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -458,7 +350,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aedefb08b2f94112b686701c3fc3c621",
+       "model_id": "05d01196a3124abda0606d74ca8f8309",
        "version_major": 2,
        "version_minor": 0
       },
@@ -478,39 +370,6 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DatasetDict({\n",
-       "    train: Dataset({\n",
-       "        features: ['image', 'label'],\n",
-       "        num_rows: 7000\n",
-       "    })\n",
-       "    validation: Dataset({\n",
-       "        features: ['image', 'label'],\n",
-       "        num_rows: 1600\n",
-       "    })\n",
-       "    test: Dataset({\n",
-       "        features: ['image', 'label'],\n",
-       "        num_rows: 1400\n",
-       "    })\n",
-       "})"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mine_fatura"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
    "outputs": [],
    "source": [
     "invoiceXpert = DatasetDict()\n",
@@ -521,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -561,12 +420,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e07af50130043b0a5baf3daaf8469ea",
+       "model_id": "a25bb56c7da94d49827c1bcdf5529192",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Saving the dataset (0/3 shards):   0%|          | 0/13400 [00:00<?, ? examples/s]"
+       "Saving the dataset (0/5 shards):   0%|          | 0/13400 [00:00<?, ? examples/s]"
       ]
      },
      "metadata": {},
@@ -575,12 +434,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3d2f0bb0ae3246aaa28ae0fd9a3fafb4",
+       "model_id": "0dc423726bc64e7f931db595b446dc8a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Saving the dataset (0/1 shards):   0%|          | 0/3200 [00:00<?, ? examples/s]"
+       "Saving the dataset (0/2 shards):   0%|          | 0/3200 [00:00<?, ? examples/s]"
       ]
      },
      "metadata": {},
@@ -589,12 +448,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e66d5d44c7c647a0805e011ee0160389",
+       "model_id": "dab257af473f4cdb8a815528a199887b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Saving the dataset (0/1 shards):   0%|          | 0/3000 [00:00<?, ? examples/s]"
+       "Saving the dataset (0/2 shards):   0%|          | 0/3000 [00:00<?, ? examples/s]"
       ]
      },
      "metadata": {},
@@ -602,12 +461,12 @@
     }
    ],
    "source": [
-    "invoiceXpert.save_to_disk(config.data.invoiceXpert_local)"
+    "invoiceXpert.save_to_disk(config.data.invoiceXpert.local_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
