add simple app for showcase

--- a/notebooks/invoice_ner.ipynb
+++ b/notebooks/invoice_ner.ipynb
@@ -13,11 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from PIL import Image, ImageDraw, ImageFont\n",
-    "\n",
-    "import numpy as np\n",
-    "\n",
-    "from transformers import LayoutLMv3ForTokenClassification, AutoProcessor, pipeline\n",
+    "from transformers import LayoutLMv3ForTokenClassification, AutoProcessor\n",
     "from datasets import load_from_disk\n",
     "\n",
     "import lovely_tensors as lt\n",
