--- a/notebooks/create_custom_dataset.ipynb
+++ b/notebooks/create_custom_dataset.ipynb
@@ -58,6 +58,8 @@
       "    hf_path: wiF0n/InvoiceXpert\n",
       "    local_path: data/invoiceXpert\n",
       "    num_labels: 2\n",
+      "    label_col: label\n",
+      "    image_col: image\n",
       "    label_names:\n",
       "    - invoice\n",
       "    - not-invoice\n",
@@ -66,12 +68,15 @@
       "    oob:\n",
       "      pt: microsoft/dit-base\n",
       "      ft: microsoft/dit-base-finetuned-rvlcdip\n",
+      "  retrieval:\n",
+      "    layoutlmv3: microsoft/layoutlmv3-base\n",
+      "    layoutlmv3_invoice_ft: Theivaprakasham/layoutlmv3-finetuned-invoice\n",
       "mlflow:\n",
       "  experiments:\n",
       "    classification: invoice-classification\n",
       "utils:\n",
       "  seed: 420\n",
-      "  run_date: 2024-03-02/24/24\n",
+      "  run_date: 2024-48-02/26/24\n",
       "\n"
      ]
     }
@@ -98,7 +103,7 @@
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
      "execution_count": 5,
@@ -122,7 +127,78 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4352b175f77e4caaaf37e32c4fab4655",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading readme:   0%|          | 0.00/1.69k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "369202a793b643c5b5da3bec5012434d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data:   0%|          | 0.00/293M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4b28f6cbd628433b8160a59b13d23bef",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data:   0%|          | 0.00/50.1M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5998d483a68a4db8a18f4f42ecf1bc60",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating train split:   0%|          | 0/8600 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d7928a1eebe048a2a1ce68c78ec8c9fa",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating test split:   0%|          | 0/1400 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "fatura = load_dataset(config.data.fatura)"
    ]
@@ -131,7 +207,120 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "04833f63403f49018eb2d1090fbf64ac",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading readme:   0%|          | 0.00/1.41k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "98e31882fc9b4d08b164d72229b27486",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data:   0%|          | 0.00/374M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9b88bf1a099a4f0cb3ea6d9973df5696",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data:   0%|          | 0.00/361M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "09438d73f4264d6dbed51020206cbd49",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data:   0%|          | 0.00/180M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8e9f559c36834228be7531b93643eab7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data:   0%|          | 0.00/186M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "839f57b44d81466a96028b4c90b1349c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating train split:   0%|          | 0/6400 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "92137c8aced8428eb13e32b616135832",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating validation split:   0%|          | 0/1600 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ca0b05cea80d47c0826d07733c9a2d92",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating test split:   0%|          | 0/1600 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "rvl_cdip = load_dataset(config.data.rvl_cdip_subset)"
    ]
@@ -179,7 +368,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd6563a22b3846cea64f418ecc565a88",
+       "model_id": "6f6f981e3dc5438b84f0e1c404c80d96",
        "version_major": 2,
        "version_minor": 0
       },
@@ -193,7 +382,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c3757db7f29342608e70bcf7410936dc",
+       "model_id": "a143e543b19f40bda8835b93a26962cc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -207,7 +396,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0be6dc132ac14d1db6a3637da73bf9f0",
+       "model_id": "ec90bd2b6e4343acba5f8b8980ce4b00",
        "version_major": 2,
        "version_minor": 0
       },
@@ -221,7 +410,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "82c73a83728c44fa944e5bd2da80f493",
+       "model_id": "98b5fe043f8e4a55a3a8287a352c46fb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -235,7 +424,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2af0036deb064639bd07544df02debf5",
+       "model_id": "d047202efc1944bbbdcd87adb3e3ef42",
        "version_major": 2,
        "version_minor": 0
       },
@@ -249,7 +438,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "48daf6e3c20e419da1e591713a45ad23",
+       "model_id": "2092a48f31c54557ba4bbe443e580c37",
        "version_major": 2,
        "version_minor": 0
       },
@@ -308,7 +497,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "afb5e40ba51844c2b5723cc9d1a9559d",
+       "model_id": "eb197562a6d54a04be6617e847f65e4d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -322,7 +511,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "09a09aa8e7cb4444af1c76f9ea347f2f",
+       "model_id": "ab7129b0f0814aaa94865dac10247381",
        "version_major": 2,
        "version_minor": 0
       },
@@ -336,7 +525,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b02e864db60a43cbb40c4c9965fddb1e",
+       "model_id": "93cfe1a500a6499fb44a3fbab5e2451e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -350,7 +539,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "05d01196a3124abda0606d74ca8f8309",
+       "model_id": "4ea77e8a267942c2a034359ea1415e67",
        "version_major": 2,
        "version_minor": 0
       },
@@ -414,13 +603,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a25bb56c7da94d49827c1bcdf5529192",
+       "model_id": "6942a8a929dc40a98710a5e566ce6c85",
        "version_major": 2,
        "version_minor": 0
       },
@@ -434,7 +623,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0dc423726bc64e7f931db595b446dc8a",
+       "model_id": "4f88815772c745d484408005f85a9690",
        "version_major": 2,
        "version_minor": 0
       },
@@ -448,7 +637,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dab257af473f4cdb8a815528a199887b",
+       "model_id": "76cb4ef9f89345549beba3e0369de1fe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -466,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +687,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
