small notebook changes

--- a/notebooks/invoice_ner.ipynb
+++ b/notebooks/invoice_ner.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
       "    classification: invoice-classification\n",
       "utils:\n",
       "  seed: 420\n",
-      "  run_date: 2024-51-02/26/24\n",
+      "  run_date: 2024-40-03/03/24\n",
       "\n"
      ]
     }
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        "<PIL.PngImagePlugin.PngImageFile image mode=RGB size=595x841>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,6 +116,15 @@
    "source": [
     "test_image = invoice_df[\"test\"][1250][\"image\"]\n",
     "test_image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_image.save(\"doc_examples/invoice.png\")"
    ]
   },
   {
