--- a/notebooks/train_custom_lora_model.ipynb
+++ b/notebooks/train_custom_lora_model.ipynb
@@ -16,7 +16,7 @@
     "import numpy as np\n",
     "import torch\n",
     "import mlflow\n",
-    "from datasets import load_from_disk, load_dataset\n",
+    "from datasets import load_from_disk\n",
     "from transformers import AutoImageProcessor, AutoModelForImageClassification, Trainer, TrainingArguments\n",
     "from peft import LoraConfig, get_peft_model\n",
     "\n",
@@ -172,7 +172,11 @@
     }
    ],
    "source": [
-    "model = AutoModelForImageClassification.from_pretrained(config.models.classification.oob.pt, num_labels=2, ignore_mismatched_sizes=True)\n",
+    "model = AutoModelForImageClassification.from_pretrained(\n",
+    "    config.models.classification.oob.pt, \n",
+    "    num_labels=config.data.invoiceXpert.num_labels, \n",
+    "    ignore_mismatched_sizes=True,\n",
+    ")\n",
     "lora_config = LoraConfig(\n",
     "    **config_to_container(config.lora)\n",
     ")\n",
